# nswineproxy

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
common/: nsWireProtocol.c  nsWireProtocol.h
slave/: .gitignore  Makefile.am  Makefile.in  nswineslave.c
tests/: .gitignore  Makefile.am  test-message.c
